# audio-call-entity-extraction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config_benchmark.yaml  config_cpu.yaml  config_gpu.yaml  pyproject.toml  skills-lock.json
data/: ground_truth.json  splits.json
docs/dev/prompts/: llm_agent_iteration_v0.yaml  llm_v2.yaml  llm_v3.yaml  llm_v4.yaml  llm_v5.yaml  llm_v7_de.yaml  llm_v7_en.yaml
prompts/extraction/: llm.yaml  llm_v10.yaml  llm_v2.yaml  llm_v4.yaml  llm_v6.yaml  llm_v7.yaml  llm_v8.yaml  llm_v8_de.yaml  llm_v8_en.yaml  llm_v9.yaml  privacy_filter.yaml
prompts/transcription/: de_v1.yaml  openai_de.yaml
scripts/: debug_single_call.py
src/phonebot/: cli.py  config.py  evaluation.py  normalization.py  observability.py  pipeline.py  schemas.py
src/phonebot/diarization/: pyannote.py
src/phonebot/extraction/: __init__.py  base.py  gliner.py  llm.py  presidio.py  privacy_filter.py
src/phonebot/preprocessing/: __init__.py  base.py  deepfilter.py  fastenhancer.py
src/phonebot/transcription/: __init__.py  base.py  deepgram.py  openai_llm.py  parakeet.py  whisperx.py
tests/: test_cli.py  test_config_precedence.py  test_deepgram.py  test_evaluation.py  test_extraction_base.py  test_normalization.py  test_observability.py  test_openai_model_config.py  test_parakeet.py  test_pipeline.py  test_preprocessing.py  test_schemas.py  test_split.py  test_whisperx.py
