[project]
name = "phonebot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "deepgram-sdk",
    "pydantic",
    "pydantic-settings>=2.3",
    "typer",
    "pyyaml",
    "jinja2",
    "tenacity",
    "python-dotenv",
    "langsmith",
    "phonenumbers>=9.0.29",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "types-pyyaml>=6.0.12.20260408",
    "pytest-asyncio>=0.23",
]
gpu = [
    "whisperx",
    "nemo_toolkit[asr]",
]
denoise = [
    "deepfilternet",
]

[project.scripts]
phonebot = "phonebot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phonebot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
