[project]
name = "phonebot"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "openai",
    "deepgram-sdk",
    "pydantic",
    "pydantic-settings>=2.3",
    "typer",
    "pyyaml",
    "jinja2",
    "tenacity",
    "python-dotenv",
    "langsmith",
    "phonenumbers>=9.0.29",
    "email-validator>=2.3.0",
    "static-ffmpeg>=2.5",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "types-pyyaml>=6.0.12.20260408",
    "pytest-asyncio>=0.23",
]
gpu = [
    "whisperx",
    "onnxruntime-gpu",
    "librosa",
    "scipy",
    "nemo_toolkit[asr]",
]
gpu-benchmark = [
    "onnxruntime-gpu",
    "librosa",
    "scipy",
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "nvidia-curand-cu12>=10.3.9.90",
    "nvidia-cufft-cu12>=11.3.3.83",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.dependency-metadata]]
name = "faster-whisper"
version = "1.2.1"
requires-dist = [
    "ctranslate2<5,>=4.0",
    "huggingface-hub>=0.21",
    "tokenizers<1,>=0.13",
    "av>=11",
    "tqdm",
]

[project.scripts]
phonebot = "phonebot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phonebot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
